<resources>
    <string-array name="categorie_personnage">
        <item>Capacités</item>
        <item>5 Sens</item>
        <item>Compétences de combat</item>
        <item>Compétences de tir</item>
        <item>Compétences</item>
        <item>Compétences utilisées</item>
        <item>Compétences complexes</item>
        <item>Sortilèges</item>
    </string-array>


    <string name="app_name">JeuDeRole</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_carte">Carte</string>
    <string name="menu_capacite">Capacite</string>
    <string name="menu_modification">Modification</string>
    <string name="menu_de">Dé aléatoire</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="tv_fragMap_tv">Map</string>

    <string name="carte_du_monde_opstandne">carte du monde opstandne</string>

    <string name="Sigleprecedent"><![CDATA[<<]]></string>
    <string name="SigleSuivant"><![CDATA[>>]]></string>
    <string name="Sigledebut"><![CDATA[|<<]]></string>
    <string name="Siglefin"><![CDATA[>>|]]></string>
    <string name="sepdeuxpoints">:   </string>
    <string name="id"><u>Id</u></string>
    <string name="abreviation"><u>Abreviation</u></string>
    <string name="categorie"><u>Categorie</u></string>
    <string name="nom_complet"><u>Nom Complet</u></string>
    <string name="points_maximum"><u>Points Maximum</u></string>
    <string name="degats"><u>Dégats</u></string>
    <string name="points_actuels"><u>Points Actuels</u></string>
    <string name="regles_speciales"><u>Règles Spéciales</u></string>
    <string name="initiation"><u>Initiation</u></string>
    <string name="entrainement"><u>Entrainement</u></string>
    <string name="maitrise"><u>Maîtrise</u></string>
    <string name="points_initiation"><u>Points Initiation</u></string>
    <string name="points_entrainement"><u>Points Entrainement</u></string>
    <string name="points_maitrise"><u>Points Maîtrise</u></string>
    <string name="reinitilisation_donnees">Réiniatilisation Données</string>
    <string name="modifier">Modifier</string>
    <string name="mise_zero_des_donnees">Mise à zéro des données</string>
    <string name="ajouter">Ajouter</string>
    <string name="de6">Dé 6</string>
    <string name="de12">Dé 12</string>
    <string name="de100">Dé 100</string>
    <string name="choisisser_un_d_al_atoire">Choisissez
        un dé aléatoire</string>
    <string name="de_face_un">dé face un</string>
    <string name="de_face_deux">de face deux</string>


</resources>