<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/minicarte"
            android:title="@string/menu_carte" />
        <item
            android:id="@+id/nav_capacite"
            android:icon="@drawable/capacite"
            android:title="@string/menu_capacite" />

        <item
            android:id="@+id/nav_modification"
            android:icon="@drawable/modification"
            android:title="@string/menu_modification" />
        <item
            android:id="@+id/nav_de"
            android:icon="@drawable/imagede"
            android:title="@string/menu_de" />

    </group>
</menu>