<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.FragmentDe">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/fontColorTitre"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/choisisser_un_d_al_atoire"
            android:textAlignment="center"
            android:textSize="20sp" />

        <View
            android:layout_width="20dp"
            android:layout_height="20dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bt_de_de6"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/de6"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/taillepolicetableau" />

            <View
                android:layout_width="30dp"
                android:layout_height="0dp" />

            <Button
                android:id="@+id/bt_de_de12"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/de12"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/taillepolicetableau" />

            <View
                android:layout_width="30dp"
                android:layout_height="0dp" />

            <Button
                android:id="@+id/bt_de_de100"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/de100"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/taillepolicetableau" />
        </LinearLayout>


    </LinearLayout>
    <View
        android:layout_width="30dp"
        android:layout_height="20dp" />

    <TextView
        android:id="@+id/tv_de_affichagenumerique"
        android:layout_width="100dp"
        android:layout_height="20dp"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp" />
    <View
        android:layout_width="30dp"
        android:layout_height="20dp" />
    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@color/black"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">
    <View
        android:layout_width="30dp"
        android:layout_height="30dp" />
    <ImageButton
        android:id="@+id/ib_de_faceDeUn"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@string/de_face_un"/>
    <View
        android:layout_width="30dp"
        android:layout_height="30dp" />
    <ImageButton
        android:id="@+id/ib_de_faceDeDeux"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@string/de_face_deux"/>
        <View
            android:layout_width="30dp"
            android:layout_height="30dp" />

</LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@color/black"/>
    <ListView
        android:id="@+id/lv_de_listeview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
</LinearLayout>
