<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.FragmentModification">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:background="@color/black"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bt_capacitemodification_debut"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/Sigledebut" />

        <View
            android:layout_width="5dp"
            android:layout_height="0dp" />

        <Button
            android:id="@+id/bt_capacitemodification_precedent"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/Sigleprecedent" />

        <View
            android:layout_width="20dp"
            android:layout_height="0dp" />

        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="wrap_content"

            android:orientation="vertical">

            <Spinner
                android:id="@+id/sp_capacitemodification_categoriePersonnage"
                android:layout_width="200dp"
                android:background="@color/purple_200"
                android:layout_height="wrap_content" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="20dp"/>

            <TextView
                android:id="@+id/tv_capacitemodification_index"
                android:textAlignment="center"
                android:layout_width="100dp"
                android:background="@color/white"
                android:layout_height="wrap_content"
                android:text="0"/>
        </LinearLayout>

        <View
            android:layout_width="20dp"
            android:layout_height="0dp" />

        <Button
            android:id="@+id/bt_capacitemodification_suivant"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/SigleSuivant" />

        <View
            android:layout_width="20dp"
            android:layout_height="0dp" />

        <Button
            android:id="@+id/bt_capacitemodification_fin"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/Siglefin" />
    </LinearLayout>
    <EditText
        android:id="@+id/et_capacitemodification_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <View
        android:id="@+id/view_capacitemodification_view_id"
        android:layout_width="0dp"
        android:layout_height="10dp"
        />
    <EditText
        android:id="@+id/et_capacitemodification_abreviation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <View
        android:id="@+id/view_capacitemodification_view_abreviation"
        android:layout_width="0dp"
        android:layout_height="10dp"
        />
    <EditText
        android:id="@+id/et_capacitemodification_categorie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <View
        android:id="@+id/view_capacitemodification_view_categorie"
        android:layout_width="0dp"
        android:layout_height="10dp"
        />
    <EditText
        android:id="@+id/et_capacitemodification_nomcomplet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <View
        android:id="@+id/view_capacitemodification_view_nomcomplet"
        android:layout_width="0dp"
        android:layout_height="10dp"
        />
    <EditText
        android:id="@+id/et_capacitemodification_maxpoint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <View
        android:id="@+id/view_capacitemodification_view_maxpoint"
        android:layout_width="0dp"
        android:layout_height="10dp"
        />
    <EditText
        android:id="@+id/et_capacitemodification_degats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <View
        android:id="@+id/view_capacitemodification_view_degats"
        android:layout_width="0dp"
        android:layout_height="10dp"
        />
    <EditText
        android:id="@+id/et_capacitemodification_pointactuel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <View
        android:id="@+id/view_capacitemodification_view_pointactuel"
        android:layout_width="0dp"
        android:layout_height="10dp"
        />
    <EditText
        android:id="@+id/et_capacitemodification_reglespeciale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <View
        android:id="@+id/view_capacitemodification_view_reglespeciale"
        android:layout_width="0dp"
        android:layout_height="10dp"
        />
    <EditText
        android:id="@+id/et_capacitemodification_initiation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <View
        android:id="@+id/view_capacitemodification_view_initiation"
        android:layout_width="0dp"
        android:layout_height="10dp"
        />
    <EditText
        android:id="@+id/et_capacitemodification_entrainement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <View
        android:id="@+id/view_capacitemodification_view_entrainement"
        android:layout_width="0dp"
        android:layout_height="10dp"
        />
    <EditText
        android:id="@+id/et_capacitemodification_maitrise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <View
        android:id="@+id/view_capacitemodification_view_maitrise"
        android:layout_width="0dp"
        android:layout_height="10dp"
        />
    <EditText
        android:id="@+id/et_capacitemodification_initiationpoint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <View
        android:id="@+id/view_capacitemodification_view_initiationpoint"
        android:layout_width="0dp"
        android:layout_height="10dp"
        />
    <EditText
        android:id="@+id/et_capacitemodification_entrainementpoint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <View
        android:id="@+id/view_capacitemodification_view_entrainementpoint"
        android:layout_width="0dp"
        android:layout_height="10dp"
        />
    <EditText
        android:id="@+id/et_capacitemodification_maitrisepoint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <View
        android:id="@+id/view_capacitemodification_view_maitrisepoint"
        android:layout_width="0dp"
        android:layout_height="10dp"
        />
</LinearLayout>


